# wuparam

./: AUTHORS  ChangeLog  ChangeLog.bak  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.in  mkinstalldirs  sample.wuplot  wu2txt_data_format.txt  wuparam.1  wuparam.spec  wuplot.1
src/: .#Camera.cpp.1.55  .#Camera.cpp.1.57  .#Config.cpp.1.68  .gdb_history  AngleConverters.h  BROWSE  Camera.cpp  Camera.h  Config.cpp  Config.h  Cutter.cpp  Cutter.h  DataReader.cpp  DataReader.h  DataRecords.h  DataWriter.cpp  DataWriter.h  Doxyfile  EZCutter.cpp  EZCutter.h  EnergySpectrum.cpp  EnergySpectrum.h  Exceptions.h  Fitter.cpp  Fitter.h  FitterNew.cpp  FitterNew.h  GainFinder.cpp  GainFinder.h  GaussianDeviate.cpp  GaussianDeviate.h  Histogram.cpp  Histogram.h  Image2D.cpp  Image2D.h  ImageAnalyzer.cpp  ImageAnalyzer.h  ImageCleaner.cpp  ImageCleaner.h  ImageFilter.cpp  (+39 more)
src/CVS/: Entries  Repository  Root
src/doc/html/: AngleConverters_8h-source.html  AngleConverters_8h_source.html  Camera_8cpp-source.html  Camera_8cpp_source.html  Camera_8h-source.html  Camera_8h_source.html  Config_8cpp-source.html  Config_8cpp_source.html  Config_8h-source.html  Config_8h_source.html  Cutter_8cpp-source.html  Cutter_8cpp_source.html  Cutter_8h-source.html  Cutter_8h_source.html  DataReader_8cpp-source.html  DataReader_8cpp_source.html  DataReader_8h-source.html  DataReader_8h_source.html  DataRecords_8h-source.html  DataRecords_8h_source.html  DataWriter_8cpp-source.html  DataWriter_8cpp_source.html  DataWriter_8h-source.html  DataWriter_8h_source.html  EZCutter_8cpp-source.html  EZCutter_8cpp_source.html  EZCutter_8h-source.html  EZCutter_8h_source.html  EnergySpectrum_8cpp-source.html  EnergySpectrum_8cpp_source.html  EnergySpectrum_8h-source.html  EnergySpectrum_8h_source.html  Exceptions_8h-source.html  Exceptions_8h_source.html  FitterNew_8cpp-source.html  FitterNew_8cpp_source.html  FitterNew_8h-source.html  FitterNew_8h_source.html  Fitter_8cpp-source.html  Fitter_8cpp_source.html  (+294 more)
src/doc/latex/: annotated.tex  bug.tex  classAnalysisException.eps  classAnalysisException.tex  classCamera.tex  classConfig.tex  classCriticalAnalysisException.eps  classCriticalAnalysisException.tex  classCutFactory.tex  classCutRunInfo.eps  classCutRunInfo.tex  classCutter.tex  classDataReader.eps  classDataReader.tex  classDataWriter.eps  classDataWriter.tex  classDefaultImageCleaner.eps  classDefaultImageCleaner.tex  classEOFException.eps  classEOFException.tex  classEZCutter.eps  classEZCutter.tex  classEnergyEstimatorFactory.tex  classEnergySpectrum.eps  classEnergySpectrum.tex  classFitter.tex  classGainFinder.tex  classGaussianDeviate.tex  classHillasImageAnalyzer.eps  classHillasImageAnalyzer.tex  classHistogram.eps  classHistogram.tex  classImage2D.tex  classImageAnalyzer.eps  classImageAnalyzer.tex  classImageCleaner.eps  classImageCleaner.tex  classLogger.tex  classMCSpectrum.tex  classMildAnalysisException.eps  (+98 more)
src/doc/man/man3/: AnalysisException.3  Camera.3  Config.3  ContourSegment.3  Coordinate_t.3  CriticalAnalysisException.3  Cut.3  CutFactory.3  CutInfo.3  CutRecord.3  CutRunInfo.3  Cuts.3  Cutter.3  Data.3  DataReader.3  DataWriter.3  DefaultImageCleaner.3  EOFException.3  EZCutter.3  EnergyEstimator.3  EnergyEstimatorFactory.3  EnergySpectrum.3  EventRecord.3  Fitter.3  GainFinder.3  GaussianDeviate.3  HeaderRecord.3  HillasImageAnalyzer.3  HillasParameterization.3  Histogram.3  Image2D.3  ImageAnalyzer.3  ImageCleaner.3  ImageParameterization.3  LZAEnergyEstimator.3  Logger.3  MCBinInfo.3  MCRecord.3  MCSpectrum.3  MildAnalysisException.3  (+44 more)
support/: 109.camera  151.camera  331.camera  490.camera  EZCuts2004.conf  EZCutsForSpectrum.conf  LZACuts.conf  Makefile  Makefile.am  Makefile.in  NoCuts.conf  PizCuts2005.conf  SAO.edb  SpectralCuts.conf  SuperCuts2000.conf  SuperCuts2001.conf  SuperCuts95.conf  YBS.edb  ZCuts2001.conf  alpha-total.gpl  animate-by-run.pl  gamma-rate.gpl  gen-cut-plots.sh  gen-diag-plots.sh  image2d.pro  spectrum.gpl  veritas-4.array  veritas_499.camera  whipple-1.array  wuconf.pl  wuparam-plots.gpl
support/CVS/: Entries  Repository  Tag
