AC_INIT
AC_CONFIG_SRCDIR([src/wuparam.cpp])
AM_INIT_AUTOMAKE(wuparam,1.9)

AC_PROG_CXX
AC_PROG_CC dnl this fixes bug in older automake
dnl LF_CONFIGURE_CXX

# Check for X libraries
AC_PATH_X
AC_PATH_XTRA

# Check for other libraries
AC_CHECK_LIB(gslcblas,main)
AC_CHECK_LIB(gsl,main,,[AC_MSG_ERROR(The GNU Scientific Library is required!)])
AC_CHECK_LIB(jpeg,main)
AC_CHECK_LIB(m,main)
AC_CHECK_LIB(plot,main)
AC_CHECK_LIB(z,main)
AC_CHECK_LIB(sz,main)
dnl AC_CHECK_LIB(lam,main)
dnl AC_CHECK_LIB(mpi,main)

# Checks for header files.
AC_CHECK_HEADERS([hdf.h],,[AC_MSG_ERROR(HDF is required)])
AC_CHECK_HEADERS([sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_HEADER_STDC
AC_TYPE_SIGNAL
AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([floor gettimeofday mkdir pow rint sqrt])

AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile src/Makefile support/Makefile])
AC_OUTPUT
