pkgdata_DATA = \
	490.camera \
	331.camera \
	151.camera \
	109.camera \
	wuparam-plots.gpl \
	SuperCuts2001.conf \
	SuperCuts2000.conf \
	SuperCuts95.conf \
	ZCuts2001.conf \
	EZCuts2004.conf \
	EZCutsForSpectrum.conf \
	SpectralCuts.conf \
	NoCuts.conf \
	alpha-total.gpl \
	gamma-rate.gpl \
	image2d.pro \
	gen-cut-plots.sh \
	gen-diag-plots.sh \
	SAO.edb \
	YBS.edb \
	animate-by-run.pl \
	wuconf.pl

EXTRA_DIST = $(pkgdata_DATA)
